--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,107 @@
   }
 }
 
+* {
+  background-color: #1b1f28;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
+h1, h2, h3, p, label, li {
+  color: antiquewhite;
+}
+
+/*----------------------Intro----------------------*/
+#intro {
+  height: 100vh;
+  text-align: center;
+  padding: 40vh 0;
+}
+
+h1 {
+  text-align: center;
+  font-size: 36px;
+}
+
+/*----------------------Skills----------------------*/
+#skills {
+  width: 80%;
+  margin: 0 auto 100px auto;
+}
+
+#skills_title {
+  text-align: center;
+}
+
+#skill_list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.skills_img {
+  padding: 20px;
+  margin: 15px;
+  border: #fff 1px solid;
+  border-radius: 10%;
+  width: 250px;
+  height: 250px;
+  flex-shrink: 2;
+}
+
+/*----------------------Projects----------------------*/
+#projects {
+  width: 80%;
+  margin: 0 auto 100px auto;
+}
+
+#projects_title {
+  text-align: center;
+}
+
+#project_list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.project_img {
+  padding: 20px;
+  margin: 15px;
+  border: #fff 1px solid;
+  border-radius: 10%;
+  width: 250px;
+  height: 250px;
+  flex-shrink: 2;
+}
+
+/*----------------------Contact----------------------*/
+#contact {
+  width: 80%;
+  margin: 0 auto;
+  
+}
+
+#contact_title {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+#email_form {
+  width: 50%;
+  margin: 0 auto 25px auto;
+  padding: 40px 80px;
+  display: flex;
+  flex-direction: column;
+  border: #fff 1px solid;
+  border-radius: 10px;
+}
+
+.contact_label {
+  margin: 10px 0 5px 0;
+}
+
 .card {
   padding: 2em;
 }
