--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
 }
 
 h1, h2, h3, p, label, li {
-  color: antiquewhite;
+  color: #faebd7;
 }
 
 /*----------------------Intro----------------------*/
